...
            android:layout_marginTop="20dp"
            android:text="@string/program"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_program"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_program"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_program"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

...
            android:layout_height="wrap_content"
            android:text="@string/industry"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_industry"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_industry_selection"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_industry"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

...
            android:text="@string/category"
            android:textColor="@color/dark_color"
            android:textSize="16sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/grp_category"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_category_selection"
                style="@style/SpinnerTextViewStyle"
                android:text="@string/select_category"/>

            <ImageView
                style="@style/SpinnerImageViewStyle"/>

...
            android:layout_marginTop="20dp"
            android:text="@string/profession"
            android:textColor="@color/dark_color"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/grp_profession"
            style="@style/SpinnerLayoutStyle"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txt_profession_selection"
                style="@style/SpinnerTextViewStyle"
...
