<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="30dp"
        android:paddingStart="30dp">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="12dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/xaba_red_logo_bigger"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/country"
                android:textColor="@color/dark_color"
                android:textSize="15sp"/>

            <LinearLayout
                android:id="@+id/grp_country"
                style="@style/SpinnerLayoutStyle"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/txt_country_selection"
                    style="@style/SpinnerTextViewStyle"
                    android:textSize="15sp"
                    android:text="@string/select_country"/>

                <ImageView
                    style="@style/SpinnerImageViewStyle"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/language"
                android:textColor="@color/dark_color"
                android:textSize="15sp"/>

            <LinearLayout
                android:id="@+id/grp_language"
                style="@style/SpinnerLayoutStyle"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/txt_language_selection"
                    style="@style/SpinnerTextViewStyle"
                    android:textSize="15sp"
                    android:text="@string/select_preferred_language"/>

                <ImageView
                    style="@style/SpinnerImageViewStyle"/>

            </LinearLayout>

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="24dp"
            android:layout_weight="0.8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/welcome_to_xaba_shikanisha"
                android:textColor="@color/dark_color"
                android:textSize="19sp"
                android:textStyle="bold"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/green_line"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/we_have_made_it_easier_for_you_to_register"
                android:textColor="@color/dark_color"
                android:textSize="17sp"/>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/register"
                style="@style/ButtonLinkStyle"
                android:layout_marginTop="15dp"
                android:minHeight="0dp"
                android:paddingTop="6dp"
                android:paddingBottom="10dp"
                android:textSize="15sp"
                android:text="@string/register_now"/>

            <Button
                android:id="@+id/next"
                style="@style/ButtonGreenStyle"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:text="@string/next"/>

            <Button
                android:id="@+id/log_in"
                style="@style/ButtonLinkStyle"
                android:layout_marginTop="5dp"
                android:minHeight="0dp"
                android:paddingTop="11dp"
                android:paddingBottom="6dp"
                android:textSize="15sp"
                android:text="@string/login_u"/>

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:minHeight="5dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</ScrollView>