...
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/green_color"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_chooser"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/white"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/green_color"
            android:textColor="@color/white"
            android:text="@string/select"
            android:textSize="17sp"/>
...
