...
              android:orientation="horizontal"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/txt_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
...
